deploy and extract contract data

--- a/ui/description.html
+++ b/ui/description.html
@@ -5,7 +5,9 @@
         <style>
             input[type=text], textarea { width: 100%;}
         </style>
-        <script src="description.js"></script>
+        <script src="artifacts/addresses.js"></script>
+        <script src="js/common.js"></script>
+        <script src="js/description.js"></script>
     </head>
     <body>
         <h1>Item Description</h1>
