--- a/ui/description.html
+++ b/ui/description.html
@@ -14,5 +14,5 @@
         <p>Title: <input type="text" id="title"/></p>
         <p>Short description: <textarea id="short"></textarea></p>
         <p>Long description: <textarea id="long" style="height: 15ex"></textarea></p>
-        <p><input type="button" value="submit"/></p>
+        <p><input type="button" value="submit" onclick="createNewItem()"/></p>
     </body>
