--- a/ui/description.html
+++ b/ui/description.html
@@ -5,6 +5,7 @@
         <style>
             input[type=text], textarea { width: 100%;}
         </style>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/description.js"></script>
