--- a/ui/description.html
+++ b/ui/description.html
@@ -12,8 +12,15 @@
     </head>
     <body>
         <h1>Item Description</h1>
+        <p>Language: <input type="text" id="locale" value="en"/></p>
         <p>Title: <input type="text" id="title"/></p>
         <p>Short description: <textarea id="short"></textarea></p>
         <p>Long description: <textarea id="long" style="height: 15ex"></textarea></p>
+        <p>Minimal prices:</p>
+        <p>in ETH: <input type="number" id="priceETH"/>
+            <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
+        <p>in AR: <input type="number" id="priceAR"/>
+            <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label>
+            (WARNING: If you sell in AR, the payment gateway can be easily hacked bypassing payment to you.)</p>
         <p><input type="button" value="submit" onclick="createItem()"/></p>
     </body>
