--- a/ui/description.html
+++ b/ui/description.html
@@ -14,8 +14,7 @@
         <h1>Item Description</h1>
         <p>Language: <input type="text" id="locale" value="en"/></p>
         <p>Title: <input type="text" id="title"/></p>
-        <p>Short description: <textarea id="short"></textarea></p>
-        <p>Long description: <textarea id="long" style="height: 15ex"></textarea></p>
+        <p>Description: <textarea id="description"></textarea></p>
         <p>Minimal prices:</p>
         <p>in ETH: <input type="number" id="priceETH"/>
             <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
