--- a/ui/author.html
+++ b/ui/author.html
@@ -7,8 +7,22 @@
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/author.js"></script>
+        <style>
+            table { border-collapse: collapse; }
+            tr, th { border: 1px solid gray }
+        </style>
     </head>
     <body>
         <h1>Author's Dashboard</h1>
-        
+        <p><a href="description.html">New title</a></p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Price in ETH</th>
+                    <th>Price in AR</th>
+                </tr>
+            </thead>
+            <tbody id="theTable"></tbody>
+        </table>
     </body>
