--- a/ui/description.html
+++ b/ui/description.html
@@ -22,4 +22,5 @@
             <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label>
             (WARNING: If you sell in AR, the payment gateway can be easily hacked bypassing payment to you.)</p>
         <p><input type="button" value="submit" onclick="createItem()"/></p>
+        <p id="uploadLink" style="display: none;"><a href="">Upload file</a></p>
     </body>
