--- a/ui/description.html
+++ b/ui/description.html
@@ -15,6 +15,7 @@
         <p>Language: <input type="text" id="locale" value="en"/></p>
         <p>Title: <input type="text" id="title"/></p>
         <p>Description: <textarea id="description"></textarea></p>
+        <p>License: <textarea id="license"></textarea></p>
         <p>Minimal prices:</p>
         <p>in ETH: <input type="number" id="priceETH"/>
             <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
