--- a/ui/download.html
+++ b/ui/download.html
@@ -15,6 +15,7 @@
         <p>Language: <span id="locale"></span></p>
         <p>Title: <span id="title"></span></p>
         <p>Description: <span id="description"></span></p>
+        <p>License: <span id="license"></span></p>
         <p>Prices:</p>
         <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay"/></p>
         <p>in AR: <span id="priceAR"></span> <input type="button" value="Pay"/></p>
