--- a/ui/download.html
+++ b/ui/download.html
@@ -6,6 +6,7 @@
             input[type=text], textarea { width: 100%;}
         </style>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/download.js"></script>
