--- a/ui/description.html
+++ b/ui/description.html
@@ -20,8 +20,7 @@
         <p>in ETH: <input type="number" id="priceETH"/>
             <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
         <p>in AR: <input type="number" id="priceAR"/>
-            <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label>
-            (WARNING: If you sell in AR, the payment gateway can be easily hacked bypassing payment to you.)</p>
+            <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label></p>
         <p><input type="button" value="submit" onclick="createItem()"/></p>
         <p id="uploadLink" style="display: none;"><a href="">Upload file</a></p>
     </body>
