--- a/ui/upload.html
+++ b/ui/upload.html
@@ -10,5 +10,8 @@
         <p>Files set version: <input type="number" id="version"/></p>
         <p>File format: <input type="text" id="format"/></p>
         <p>File: <input type="file" id="file"/></p>
+        <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
+            the password can download the file (however this may be illegal dependently on the
+            jurisdiction and the license). Removal of the uploaded file is not possible.</p>
         <p><input type="button" value="submit" onclick="upload()"/></p>
     </body>
