--- a/ui/download.html
+++ b/ui/download.html
@@ -23,8 +23,8 @@
         <p>Description: <span id="description"></span></p>
         <p>License: <span id="license"></span></p>
         <p>Prices:</p>
-        <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay"/></p>
-        <p>in AR: <span id="priceAR"></span> <input type="button" value="Pay"/></p>
+        <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay" onclick="payETH()"/></p>
+        <p>in AR: <span id="priceAR"></span> <input type="button" value="Pay" onclick="payAR()"/></p>
         <p>File formats:</p>
         <ul id="formats"></ul>
     </body>
