--- a/ui/author.html
+++ b/ui/author.html
@@ -14,6 +14,10 @@
     </head>
     <body>
         <h1>Author's Dashboard</h1>
+        <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
+            <span id="arWallet"></span>
+            <input type="button" value="Set AR wallet"/></p>
+        </p>
         <p><a href="description.html">New title</a></p>
         <table>
             <thead>
