--- a/ui/author.html
+++ b/ui/author.html
@@ -4,6 +4,8 @@
         <title>Author's Dashboard</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
+        <script src="artifacts/SmartWeave.js"></script>
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/author.js"></script>
@@ -16,7 +18,7 @@
         <h1>Author's Dashboard</h1>
         <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
             <span id="arWallet"></span>
-            <input type="button" value="Set AR wallet"/></p>
+            <input type="button" value="Set AR wallet" onclick="setARWallet()"/></p>
         </p>
         <p><a href="description.html">New title</a></p>
         <table>
