setting AR wallet

--- a/ui/author.html
+++ b/ui/author.html
@@ -17,7 +17,7 @@
     <body>
         <h1>Author's Dashboard</h1>
         <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
-            <span id="arWallet"></span>
+            <code id="arWallet"></code>
             <input type="button" value="Set AR wallet" onclick="setARWallet()"/></p>
         </p>
         <p><a href="description.html">New title</a></p>
