--- a/ui/upload.html
+++ b/ui/upload.html
@@ -10,6 +10,7 @@
         <p>Files set version: <input type="number" id="version"/></p>
         <p>File format: <input type="text" id="format"/></p>
         <p>File: <input type="file" id="file"/></p>
+        <p>AR wallet key file to pay for upload: <input type="file" id="arWalletKeyFile"/></p>
         <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
             the password can download the file (however this may be illegal dependently on the
             jurisdiction and the license). Removal of the uploaded file is not possible.</p>
