showing author works

--- a/ui/author.html
+++ b/ui/author.html
@@ -11,7 +11,7 @@
         <script src="js/author.js"></script>
         <style>
             table { border-collapse: collapse; }
-            tr, th { border: 1px solid gray }
+            td, th { border: 1px solid gray }
         </style>
     </head>
     <body>
