--- a/ui/upload.html
+++ b/ui/upload.html
@@ -2,7 +2,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>Upload a File</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
+        <script src="js/common.js"></script>
+        <script src="artifacts/addresses.js"></script>
         <script src="js/upload.js"></script>
     </head>
     <body>
