--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
         </style>
     </head>
     <body>
+        <p><a href="author.html">Author's dashboard</a></p>
         <h1>List of Items to Buy or Download</h1>
         <table>
             <thead>
