--- a/ui/download.html
+++ b/ui/download.html
@@ -27,7 +27,9 @@
         <p>License: <span id="license"></span></p>
         <p>Prices:</p>
         <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay" onclick="payETH()"/></p>
-        <p>in AR: <span id="priceAR"></span> <input type="button" value="Pay" onclick="payAR()"/></p>
+        <p>in AR: <span id="priceAR"></span>
+            <input type="file" value="AR wallet key file..." id="arWalletKeyFile"/>
+            <input type="button" value="Pay" onclick="payAR()"/></p>
         <p>File formats:</p>
         <ul id="formats"></ul>
     </body>
