--- a/ui/download.html
+++ b/ui/download.html
@@ -27,8 +27,8 @@
         <p>License: <span id="license"></span></p>
         <p>Prices:</p>
         <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay" onclick="payETH()"/></p>
-        <p>in AR: <span id="priceAR"></span>
-            <input type="file" value="AR wallet key file..." id="arWalletKeyFile"/>
+        <p>in AR: <span id="priceAR"></span> |
+            AR wallet key file: <input type="file" id="arWalletKeyFile"/>
             <input type="button" value="Pay" onclick="payAR()"/></p>
         <p>File formats:</p>
         <ul id="formats"></ul>
