--- a/ui/author.html
+++ b/ui/author.html
@@ -1,6 +1,5 @@
-<html>
-    <head>
-        <meta charset="utf-8"/>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head id="head">
         <title>Author's Dashboard</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -15,21 +14,24 @@
         </style>
     </head>
     <body>
-        <h1>Author's Dashboard</h1>
-        <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
-            <code id="arWallet"></code>
-            <input type="button" value="Set AR wallet" onclick="setARWallet()"/>
-            <input type="file" value="Set AR wallet from key file..." id="arKeyFile" onchange="setARWalletFromkeyFile(event)"/></p>
-        </p>
-        <p><a href="description.html">New title</a></p>
-        <table>
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Price in ETH</th>
-                    <th>Price in AR</th>
-                </tr>
-            </thead>
-            <tbody id="theTable"></tbody>
-        </table>
+        <h1 id="title">Author's Dashboard</h1>
+        <div id="body">
+            <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
+                <code id="arWallet"></code>
+                <input type="button" value="Set AR wallet" onclick="setARWallet()"/>
+                <input type="file" value="Set AR wallet from key file..." id="arKeyFile" onchange="setARWalletFromkeyFile(event)"/>
+            </p>
+            <p><a href="description.html">New title</a></p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Price in ETH</th>
+                        <th>Price in AR</th>
+                    </tr>
+                </thead>
+                <tbody id="theTable"></tbody>
+            </table>
+        </div>
     </body>
+</html>
