--- a/ui/download.html
+++ b/ui/download.html
@@ -1,6 +1,5 @@
-<html>
-    <head>
-        <meta charset="utf-8"/>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head id="head">
         <title>Download Item</title>
         <style>
             input[type=text], textarea { width: 100%;}
@@ -15,21 +14,24 @@
         <script src="js/download.js"></script>
     </head>
     <body>
-        <h1>Download Item</h1>
-        <p style="color: red">You are legally prohibited (unless the file license explicitly permits this) to distribute
-            or obtain the download links in any other way except by using this interface or
-            interface of an equivalent functionality (that is paying the same fee and royalties).
-            Any interface distributing file uploaded through this software complex or a part of this software complex
-            must retain this license notice.</p>
-        <p>Language: <span id="locale"></span></p>
-        <p>Title: <span id="title"></span></p>
-        <p>Description: <span id="description"></span></p>
-        <p>License: <span id="license"></span></p>
-        <p>Prices:</p>
-        <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay" onclick="payETH()"/></p>
-        <p>in AR: <span id="priceAR"></span> |
-            AR wallet key file: <input type="file" id="arWalletKeyFile"/>
-            <input type="button" value="Pay" onclick="payAR()"/></p>
-        <p>File formats:</p>
-        <ul id="formats"></ul>
+        <h1 id="title">Download Item</h1>
+        <div id="body">
+            <p style="color: red">You are legally prohibited (unless the file license explicitly permits this) to distribute
+                or obtain the download links in any other way except by using this interface or
+                interface of an equivalent functionality (that is paying the same fee and royalties).
+                Any interface distributing file uploaded through this software complex or a part of this software complex
+                must retain this license notice.</p>
+            <p>Language: <span id="locale"></span></p>
+            <p>Title: <span id="title"></span></p>
+            <p>Description: <span id="description"></span></p>
+            <p>License: <span id="license"></span></p>
+            <p>Prices:</p>
+            <p>in ETH: <span id="priceETH"></span> <input type="button" value="Pay" onclick="payETH()"/></p>
+            <p>in AR: <span id="priceAR"></span> |
+                AR wallet key file: <input type="file" id="arWalletKeyFile"/>
+                <input type="button" value="Pay" onclick="payAR()"/></p>
+            <p>File formats:</p>
+            <ul id="formats"></ul>
+        </div>
     </body>
+</html>
