--- a/ui/template.html
+++ b/ui/template.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">
     <head>
         <meta charset="utf-8"/>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <xi:include href="#head"/>
     </head>
     <body>
