show spam score

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
         <title>List of Items to Buy or Download</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
-        <!--script src="artifacts/addresses.js"></script-->
+        <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/list.js"></script>
         <style>
@@ -20,6 +20,7 @@
                         <th>Title</th>
                         <th>Price in ETH</th>
                         <th>Price in AR</th>
+                        <th>Spam score</th>
                     </tr>
                 </thead>
                 <tbody id="theTable"></tbody>
