Purchase Voting Rights page

--- a/ui/template.html
+++ b/ui/template.html
@@ -5,7 +5,9 @@
         <xi:include href="#head"/>
     </head>
     <body>
-        <p><a href="index.html">Homepage</a> | <a href="author.html">Publish files</a></p>
+        <p><a href="index.html">Homepage</a> |
+            <a href="author.html">Publish files</a> |
+            <a href="purchase-voting.html">Purchase voting right</a></p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
     </body>
