--- a/ui/purchase-voting.html
+++ b/ui/purchase-voting.html
@@ -12,6 +12,8 @@
             <p>You have <span id="value"></span> voting rights tokens.</p>
             <p><input type="button" value="Purchase voting rights."/>
                 (Voting right is sold at the price 1 token for 1 ETH)</p>
+            <p>After you purchase voting right, you have unlimited votes each weighted by the amount of your
+                purchase.</p>
         </div>
     </body>
 </html>
