purchasing voting rights

--- a/ui/purchase-voting.html
+++ b/ui/purchase-voting.html
@@ -10,7 +10,7 @@
         <h1 id="title">Purchase Voting Right</h1>
         <div id="body">
             <p>You have <span id="value"></span> voting rights tokens.</p>
-            <p><input type="button" value="Purchase voting rights."/>
+            <p><input type="button" value="Purchase voting rights." onclick="buyVotingRight()"/>
                 (Voting right is sold at the price 1 token for 1 ETH)</p>
             <p>After you purchase voting right, you have unlimited votes each weighted by the amount of your
                 purchase.</p>
