--- a/ui/template.html
+++ b/ui/template.html
@@ -7,7 +7,8 @@
     <body>
         <p><a href="index.html">Homepage</a> |
             <a href="author.html">Publish files</a> |
-            <a href="purchase-voting.html">Purchase voting right</a></p>
+            <a href="purchase-voting.html">Purchase voting right</a> |
+            <a href="vote.html">Vote</a></p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
     </body>
