displaying categories (not tested)

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <h1 id="title">List of Items to Buy or Download</h1>
+        <ul id="subcategories"></ul>
         <div id="body">
             <table>
                 <thead>
