--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
                         <th>Title</th>
                         <th>Price in ETH</th>
                         <th>Price in AR</th>
-                        <th>Spam score</th>
+                        <th id="spamScoreTH">Spam score</th>
                     </tr>
                 </thead>
                 <tbody id="theTable"></tbody>
