vote URL params

--- a/ui/vote.html
+++ b/ui/vote.html
@@ -12,7 +12,7 @@
             <p>Child item or category ID: <input type="number" id="child"/></p>
             <p>Parent category ID: <input type="number" id="parent"/></p>
             <p><label><input type="radio" name="dir" value="for"/> Vote for</label>
-                <label><input type="radio" name="dir" value="agaisnt"/> Vote against</label></p>
+                <label><input type="radio" name="dir" value="against"/> Vote against</label></p>
             <p><input type="button" value="Vote" onclick="vote()"/></p>
         </div>
     </body>
