added Root Category to the header menu

--- a/ui/template.html
+++ b/ui/template.html
@@ -5,7 +5,8 @@
         <xi:include href="#head"/>
     </head>
     <body>
-        <p><a href="index.html">Homepage</a> |
+        <p><a id="rootLink">Root category</a> |
+            <a href="index.html">Recent items</a> |
             <a href="author.html">Publish files</a> |
             <a href="vote.html">Vote</a></p>
         <h1><xi:include href="#title"/></h1>
