show child/parent categories

--- a/ui/download.html
+++ b/ui/download.html
@@ -15,6 +15,9 @@
     <body>
         <h1 id="title">Download Files</h1>
         <div id="body">
+            <p>Categories:</p>
+            <ul id="categories"></ul>
+            <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
             <p style="color: red">You are legally prohibited (unless the file license explicitly permits this) to distribute
                 or obtain the download links in any other way except by using this interface or
                 interface of an equivalent functionality (that is paying the same fee and royalties).
