--- a/ui/index.html
+++ b/ui/index.html
@@ -18,10 +18,10 @@
                 <p>Category: <span id="catTitle"></span></p>
                 <h2>Parent categories</h2>
                 <ul id="supercategories"></ul>
-                <p><a href="#">More...</a> <a id="addParent">Add</a></p>
+                <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
                 <h2>Child categories</h2>
                 <ul id="subcategories"></ul>
-                <p><a href="#">More...</a> <a id="addChild">Add</a></p>
+                <p><a href="#" onclick="moreChilds(); return false">More...</a> <a id="addChild">Add</a></p>
             </div>
             <table>
                 <thead>
