terms of service

--- a/ui/template.html
+++ b/ui/template.html
@@ -8,7 +8,8 @@
         <p><a id="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
             <a href="author.html">Publish files</a> |
-            <a href="vote.html">Vote</a></p>
+            <a href="vote.html">Vote</a> |
+            <a href="terms-of-use.html">Terms of use</a></p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
     </body>
