--- a/ui/template.html
+++ b/ui/template.html
@@ -9,7 +9,8 @@
             <a href="index.html">Recent items</a> |
             <a href="author.html">Publish files</a> |
             <a href="vote.html">Vote</a> |
-            <a href="terms-of-use.html">Terms of use</a></p>
+            <a href="terms-of-use.html">Terms of use</a> |
+            <a href="http://github.com/vporton/cryptozon" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
     </body>
