UI for creating categories

--- a/ui/template.html
+++ b/ui/template.html
@@ -8,6 +8,7 @@
         <p><a id="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
             <a href="author.html">Publish files</a> |
+            <a href="create-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
             <a href="terms-of-use.html">Terms of use</a> |
             <a href="http://github.com/vporton/cryptozon" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
