displaying child categories and links

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,6 +35,12 @@
                 <tbody id="theTable"></tbody>
             </table>
             <p><a id="addItem">Add item</a></p>
+            <div id="categoryInfo2">
+                <h2>Owned child categories</h2>
+                <ul id="ownedSubcategories"></ul>
+            </div>
+            <h2>Links and messages</h2>
+            <ul id="links"></ul>
         </div>
     </body>
 </html>
