--- a/ui/template.html
+++ b/ui/template.html
@@ -8,6 +8,7 @@
         <p><a id="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
             <a href="author.html">Publish files</a> |
+            <a href="post-link.html">Post link</a> |
             <a href="create-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
             <a href="terms-of-use.html">Terms of use</a> |
