--- a/ui/template.html
+++ b/ui/template.html
@@ -7,7 +7,8 @@
     <body>
         <p><a id="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
-            <a href="author.html">Publish files</a> |
+            <a href="author.html">Author's dashboard</a> |
+            <a href="description.html">Publish files</a> |
             <a href="post-link.html">Post link</a> |
             <a href="create-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
