--- a/ui/author.html
+++ b/ui/author.html
@@ -22,6 +22,7 @@
                 <input type="file" value="Set AR wallet from key file..." id="arKeyFile" onchange="setARWalletFromkeyFile(event)"/>
             </p>
             <p><a href="description.html">New title</a></p>
+            <h2>My files</h2>
             <table>
                 <thead>
                     <tr>
@@ -32,6 +33,10 @@
                 </thead>
                 <tbody id="theTable"></tbody>
             </table>
+            <h2>Links owned by me</h2>
+            <ul id="links"></ul>
+            <h2>Categories owned by me</h2>
+            <ul id="categories"></ul>
         </div>
     </body>
 </html>
