--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -1,6 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head id="head">
         <title>Post Link or Message</title>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
         <style>
             input[type=text], textarea { width: 100%;}
         </style>
@@ -20,6 +22,11 @@
                 <label><input type="radio" name="kind" value="0"/> Directory entry</label>
                 <label><input type="radio" name="kind" value="1"/> Message</label></p>
             <p><input type="button" value="submit" onclick="createOrUpdateItem()"/></p>
+            <div id="ready" title="Request sent" style="display: none;">
+                <p>After your new link appears in <a href="author.html">the list of your links</a>,
+                    add it as a child to at least one suitable category!
+                    Otherwise it won't receive much traffic.</p>
+            </div>
         </div>
     </body>
 </html>
