--- a/ui/create-category.html
+++ b/ui/create-category.html
@@ -19,7 +19,7 @@
             <p><input type="button" value="Create" onclick="createCategory()"/></p>
             <div id="ready" title="Request sent" style="display: none;">
                 <p>After your new category appears in <a href="author.html">the list of your categories</a>,
-                    add it as a child to at least suitable one bigger category!
+                    add it as a child to at least one suitable bigger category!
                     Otherwise it won't receive much traffic.</p>
             </div>
         </div>
