AR fee on uploading

--- a/ui/terms-of-use.html
+++ b/ui/terms-of-use.html
@@ -62,6 +62,8 @@
                 (including a royalty for upvotes of owned categories).</p>
 
             <p>We change a fee from all purchases and donations. Currently the fee for purcahses and donations is 10% and for upvotes is 50% but can be changed at any time.</p>
+
+            <p>We also charge a fee for uploading files which is currently 15% of the cost of uploading but can be changed at any time.</p>
             
             <h3>No protection of content publishers rights</h3>
             
