category autocompletion in voting

--- a/ui/vote.html
+++ b/ui/vote.html
@@ -13,7 +13,7 @@
         <h1 id="title">Vote for Category Content or Subcategory</h1>
         <div id="body">
             <p>Child item or category ID: <input type="number" id="child"/></p>
-            <p>Parent category ID: <input type="number" id="parent" class="category"/></p>
+            <p>Parent category ID: <input type="text" id="parent" class="category"/></p>
             <p><label><input type="radio" name="dir" value="for"/> Vote for</label>
                 <label><input type="radio" name="dir" value="against"/> Vote against</label></p>
             <p><input type="button" value="Vote" onclick="vote()"/></p>
