--- a/ui/create-category.html
+++ b/ui/create-category.html
@@ -6,6 +6,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
+        <script src="js/category-chooser.js"></script>
         <script src="js/create-category.js"></script>
     </head>
     <body>
@@ -16,6 +17,10 @@
             <p>Category is owned by you: <input type="checkbox" id="owned"/>
                 (Others cannot post to a category owned by you, but owned categories receive
                 less promotion and search engine hits than regular categories. If doubt, leave unchecked.)</p>
+            <h2>Parent categories</h2>
+            <p>You vote for parent categories with ETH, with the discount TODO.
+                For your owned parent categories voting is free.</p>
+            <div id="voter"></div>
             <p><input type="button" value="Create" onclick="createCategory()"/></p>
             <div id="ready" title="Request sent" style="display: none;">
                 <p>After your new category appears in <a href="author.html">the list of your categories</a>,
