--- a/ui/create-category.html
+++ b/ui/create-category.html
@@ -20,7 +20,7 @@
             <h2>Parent categories</h2>
             <p>You vote for parent categories with ETH, with the discount TODO.
                 For your owned parent categories voting is free.</p>
-            <div id="voter"></div>
+            <div id="multiVoter"></div>
             <p><input type="button" value="Create" onclick="createCategory()"/></p>
             <div id="ready" title="Request sent" style="display: none;">
                 <p>After your new category appears in <a href="author.html">the list of your categories</a>,
