--- a/ui/create-category.html
+++ b/ui/create-category.html
@@ -19,7 +19,8 @@
                 less promotion and search engine hits than regular categories. If doubt, leave unchecked.)</p>
             <h2>Parent categories</h2>
             <p>You vote for parent categories with ETH, with the discount TODO.
-                For your owned parent categories voting is free.</p>
+                For your owned parent categories voting is free.
+                Add your new category to at least one parent category to have more traffic.</p>
             <div id="multiVoter"></div>
             <p><input type="button" value="Create" onclick="createCategory()"/></p>
             <div id="ready" title="Request sent" style="display: none;">
