--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -22,6 +22,7 @@
             <p>Link type:
                 <label><input type="radio" name="kind" value="0"/> Directory entry</label>
                 <label><input type="radio" name="kind" value="1"/> Message</label></p>
+            <h2>Categories</h2>
             <div id="multiVoter"></div>
             <p><input type="button" value="submit" onclick="createOrUpdateItem()"/></p>
         </div>
