items for sale work

--- a/ui/description.html
+++ b/ui/description.html
@@ -25,9 +25,10 @@
                 <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
             <p>in AR: <input type="text" id="priceAR"/>
                 <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label></p>
+            <h2>Categories</h2>
+            <div id="multiVoter"></div>
             <p><input type="button" value="submit" onclick="createOrUpdateItem()"/></p>
             <p id="uploadLink" style="display: none;"><a href="">Upload file</a></p>
-            <div id="multiVoter"></div>
         </div>
     </body>
 </html>
