--- a/ui/template.html
+++ b/ui/template.html
@@ -12,6 +12,7 @@
             <a href="post-link.html">Post link</a> |
             <a href="create-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
+            <strong><a href="help.html">Help</a></strong> |
             <a href="terms-of-use.html">Terms of use</a> |
             <a href="http://github.com/vporton/cryptozon" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
         <h1><xi:include href="#title"/></h1>
