show all recent items

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,12 +35,16 @@
                 <tbody id="theTable"></tbody>
             </table>
             <p><a id="addItem">Add item</a></p>
-            <div id="categoryInfo2">
+            <div id="ownedSubcategoriesDiv">
                 <h2>Owned child categories</h2>
                 <ul id="ownedSubcategories"></ul>
-                <h2>Links and messages</h2>
-                <ul id="links"></ul>
             </div>
+            <div id="allCategoriesDiv">
+                <h2>Categories</h2>
+                <ul id="categories"></ul>
+            </div>
+            <h2>Links and messages</h2>
+            <ul id="links"></ul>
         </div>
     </body>
 </html>
