--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
         </style>
     </head>
     <body>
-        <h1 id="title">List of Items to Buy or Download</h1>
+        <h1 id="title">List of Entries</h1>
         <div id="body">
             <div id="categoryInfo">
                 <p>Category: <span id="catTitle"></span></p>
@@ -23,6 +23,7 @@
                 <ul id="subcategories"></ul>
                 <p><a href="#" onclick="moreChilds(); return false">More...</a> <a id="addChild">Add</a></p>
             </div>
+            <h2 id="title">Items to Buy or Download</h2>
             <table>
                 <thead>
                     <tr>
