--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
                 <ul id="subcategories"></ul>
                 <p><a href="#" onclick="moreChilds(); return false">More...</a> <a id="addChild">Add</a></p>
             </div>
-            <h2 id="title">Items to Buy or Download</h2>
+            <h2>Items to Buy or Download</h2>
             <table>
                 <thead>
                     <tr>
