--- a/ui/template.html
+++ b/ui/template.html
@@ -14,6 +14,7 @@
             <a href="vote.html">Vote</a> |
             <strong><a href="help.html">Help</a></strong> |
             <a href="terms-of-use.html">Terms of use</a> |
+            <a href="shareholder.html">For shareholders</a> |
             <a href="https://github.com/vporton/zondirectory" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
