--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id="title">For shareholders</h1>
         <div id="body">
-            <p>Your profit sharing tokens: <span id="tokenETH"></span>
+            <p>Your ETH profit sharing tokens: <span id="tokenETH"></span>
                 (<span id="filesAddressElt"></span> token in MetaMask)</p>
             <p>Your earned amount in ETH: <span id="ETH"></span>
                 <input type="button" value="Withdraw" onclick="withdrawETH()"/></p>
