--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -4,7 +4,7 @@
         <script src="artifacts/addresses.js"></script>
         <script src="js/common.js"></script>
         <script src="js/shareholder.js"></script>
-        <title>Help</title>
+        <title>For shareholders</title>
     </head>
     <body>
         <h1 id="title">For shareholders</h1>
