choosing Ethereum network

--- a/ui/template.html
+++ b/ui/template.html
@@ -12,6 +12,7 @@
             <a href="post-link.html">Post link</a> |
             <a href="create-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
+            <a href="settings.html">Settings</a> |
             <strong><a href="help.html">Help</a></strong> |
             <a href="terms-of-use.html">Terms of use</a> |
             <a href="shareholder.html">For shareholders</a> |
