test mode warning

--- a/ui/template.html
+++ b/ui/template.html
@@ -17,6 +17,7 @@
             <a href="terms-of-use.html">Terms of use</a> |
             <a href="shareholder.html">For shareholders</a> |
             <a href="https://github.com/vporton/zondirectory" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
+        <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
     </body>
