noindex on editor pages

--- a/ui/vote.html
+++ b/ui/vote.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head id="head">
+        <meta name="robots" content="noindex" />    
         <title>Vote for Category Content or Subcategory</title>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
