--- a/ui/author.html
+++ b/ui/author.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head id="head">
+        <meta name="robots" content="noindex" />
         <title>Author's Dashboard</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
