--- a/ui/description.html
+++ b/ui/description.html
@@ -17,6 +17,7 @@
         <div id="body">
             <p>Language: <input type="text" id="locale" value="en"/></p>
             <p>Title: <input type="text" id="title"/></p>
+            <p>Short (meta) description: <textarea id="shortDescription"></textarea></p>
             <p>Description: <textarea id="description"></textarea></p>
             <p>License: <textarea id="license"></textarea></p>
             <p>Minimal prices:</p>
