added link meta input

--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -16,6 +16,7 @@
         <div id="body">
             <p>Language: <input type="text" id="locale" value="en"/></p>
             <p>Title: <input type="text" id="title"/></p>
+            <p>Short (meta) description: <textarea id="shortDescription"></textarea></p>
             <p>Description: <textarea id="description"></textarea></p>
             <p>Link: <input type="text" id="link"/></p>
             <p>Link type:
