--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
         <div id="body">
             <div id="categoryInfo">
                 <p>Category: <span id="catTitle"></span></p>
+                <p id="showDescription" style="display: none">Description: <span id="description"></span></p>
                 <h2>Parent categories</h2>
                 <ul id="supercategories"></ul>
                 <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
