--- a/ui/author.html
+++ b/ui/author.html
@@ -28,6 +28,7 @@
                         <th>Title</th>
                         <th>Price in ETH</th>
                         <th>Price in AR</th>
+                        <th>Operations</th>
                     </tr>
                 </thead>
                 <tbody id="theTable"></tbody>
