--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -11,12 +11,16 @@
     <body>
         <h1 id="title">For shareholders</h1>
         <div id="body">
+            <p>There are (non-voting) shares of two kinds: shares for ETH profit and
+                shares for AR profit. Investment is not solicited, but you could buy
+                shares at an exchange (when available).</p>
             <p>Your ETH profit sharing tokens: <span id="tokenETH"></span>
                 (<span id="filesAddressElt"></span> token in MetaMask)</p>
             <p>Your earned amount in ETH: <span id="ETH"></span>
                 <input type="button" value="Withdraw" onclick="withdrawETH()"/></p>
             <p>Your AR wallet (<a href="author.html">Set</a>): <span id="arWallet"></span></p>
-            <p>Your AR profit sharing tokens: <span id="tokenAR"></span></p>
+            <p>Your AR profit sharing tokens: <span id="tokenAR"></span>
+                (AR profit is distributed automatically, you don't need to withdraw.)</p>
         </div>
     </body>
 </html>
