--- a/ui/author.html
+++ b/ui/author.html
@@ -36,6 +36,8 @@
             <h2>Links owned by me</h2>
             <ul id="links"></ul>
             <h2>Categories owned by me</h2>
+            <p>You can publish for free (not counting Ethereum transaction costs) links, messages, downloads, etc.
+                in your categories.</p>
             <ul id="categories"></ul>
         </div>
     </body>
